samples/_failures_safe/1761417488_da2405_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1dd55efa.c: In function ‘handle_reading’:
./samples/SAFE/__tmp_1dd55efa.c:172:13: error: expected identifier at end of input
  172 |             safe_input(ctx->buffer, sizeof(ctx->
      |             ^~~~~~~~~~
./samples/SAFE/__tmp_1dd55efa.c:172:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1dd55efa.c:172:13: error: expected declaration or statement at end of input
